# polars-time-series-10-knock

./: 10_knocks.ipynb  10_knocks_answer.ipynb  README.md  pyproject.toml  requirements.txt
assets/: generate_dataset.py  purchase_data.csv  sale_data.csv
